<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">safi_uddin01_s_application10</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_connect_the_mac">Connect the machine</string>
  <string name="msg_cricket_trainin">Cricket training system</string>
  <string name="lbl_polish_pope">Polish Pope</string>
  <string name="lbl_next">Next</string>
  <string name="msg_training_sessio">Training Session</string>
  <string name="msg_confirm_passwor">Confirm Password</string>
  <string name="lbl_connect_the_bat">Connect the bat</string>
  <string name="lbl_reset_password">Reset Password</string>
  <string name="lbl_create_account">Create Account </string>
  <string name="lbl_change_password">Change Password</string>
  <string name="lbl_statistics">Statistics</string>
  <string name="lbl_get_started">Get Started</string>
  <string name="lbl_sign_up">Sign Up</string>
  <string name="lbl_review_shoots">Review Shoots</string>
  <string name="lbl_select_bowler">Select  Bowler</string>
  <string name="lbl_john">John</string>
  <string name="lbl_profile">Profile</string>
  <string name="lbl_90_seconds">90 seconds</string>
  <string name="lbl">\?</string>
  <string name="msg_practice_sessio">Practice Session</string>
  <string name="msg_current_passwor">Current Password</string>
  <string name="lbl_30_seconds">30 seconds</string>
  <string name="lbl_save">Save </string>
  <string name="msg_forgotten_passw">Forgotten Passwoard?</string>
  <string name="lbl_email">Email</string>
  <string name="lbl_start">Start</string>
  <string name="lbl_connect_bat">Connect bat</string>
  <string name="lbl_0">0</string>
  <string name="lbl_1">1</string>
  <string name="lbl_2">2</string>
  <string name="lbl_hi_michael">Hi, Michael &#128075;</string>
  <string name="lbl_3">3</string>
  <string name="lbl_4">4</string>
  <string name="lbl_5">5</string>
  <string name="lbl_6">6</string>
  <string name="lbl_8">8</string>
  <string name="lbl_talha">Talha</string>
  <string name="msg_send_verificati">Send Verification code</string>
  <string name="msg_enter_your_user">Enter Your Username &amp; Password</string>
  <string name="lbl_login">Login</string>
  <string name="msg_or_create_a_new">Or Create a New Account</string>
  <string name="lbl_hi_michael2">Hi, Michael</string>
  <string name="lbl_playback">Playback</string>
  <string name="lbl_cricket">Cricket</string>
  <string name="lbl_welcome_back">Welcome Back!</string>
  <string name="lbl_balls">Balls</string>
  <string name="lbl_change_email">Change Email</string>
  <string name="msg_email_or_user_n">Email or User Name</string>
  <string name="lbl_password">Password</string>
  <string name="lbl_runs">Runs</string>
  <string name="lbl_machine_delay">Machine Delay</string>
  <string name="lbl_60_seconds">60 seconds</string>
  <string name="lbl_full_name">Full Name</string>
  <string name="lbl_let_s_begin">Let\u2019s begin</string>
</resources>
