<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="screenOneVM" type="com.safiuddinsapplication.app.modules.screenone.data.viewmodel.ScreenOneVM"/>
    </data>
    <LinearLayout android:id="@+id/linearScreenOne"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyle">
        <FrameLayout android:gravity="start"
            android:id="@+id/frameStackcricket"
            android:layout_height="@dimen/_635pxv"
            android:layout_marginTop="@dimen/_15pxv" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearColumncricket"
                android:layout_gravity="top|center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_49pxv"
                android:layout_marginEnd="@dimen/_156pxh"
                android:layout_marginStart="@dimen/_156pxh"
                android:layout_marginTop="@dimen/_49pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylelime_2">
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtCricket"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{screenOneVM.screenOneModel.txtCricket}"
                    style="@style/txtABeeZeeitalic14_1" tools:text="@string/lbl_cricket"/>
            </LinearLayout>
            <ImageView android:id="@+id/imageGroupOne"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_606pxv"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_group1_606x390}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_group1_606x390"/>
            <TextView android:gravity="top|center"
                android:id="@+id/txtCrickettrainin"
                android:layout_gravity="bottom|center"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_66pxh"
                android:layout_marginStart="@dimen/_66pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:text="@{screenOneVM.screenOneModel.txtCrickettrainin}"
                style="@style/txtABeeZeeitalic36" tools:text="@string/msg_cricket_trainin"/>
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnGetStarted"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_51pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_24pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_24pxv" android:singleLine="true"
            android:text="@string/lbl_get_started"
            android:textAllCaps="false" style="@style/btnSolidRounded_2" tools:text="@string/lbl_get_started"/>
    </LinearLayout>
</layout>
