<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="screenSixVM" type="com.safiuddinsapplication.app.modules.screensix.data.viewmodel.ScreenSixVM"/>
    </data>
    <LinearLayout android:id="@+id/linearScreenSix"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylelime_901">
        <FrameLayout android:gravity="start"
            android:id="@+id/frameStackgroupone"
            android:layout_height="@dimen/_175pxv" android:layout_width="match_parent">
            <ImageView android:id="@+id/imageGroupOne"
                android:layout_gravity="start"
                android:layout_height="@dimen/_175pxh"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_group1}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_group1"/>
            <TextView android:ellipsize="end"
                android:gravity="top|start"
                android:id="@+id/txtResetPassword"
                android:layout_gravity="bottom|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_63pxv"
                android:layout_marginEnd="@dimen/_27pxh"
                android:layout_marginStart="@dimen/_27pxh"
                android:layout_marginTop="@dimen/_63pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{screenSixVM.screenSixModel.txtResetPassword}"
                style="@style/txtABeeZeeitalic32" tools:text="@string/lbl_reset_password"/>
        </FrameLayout>
        <FrameLayout android:id="@+id/frameEmail"
            android:layout_gravity="start"
            android:layout_height="@dimen/_37pxv"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_65pxv"
            android:layout_width="@dimen/_318pxh" style="@style/groupStylecornerRadius_3">
            <ImageView android:id="@+id/imageIcoutlineemai"
                android:layout_gravity="start"
                android:layout_height="@dimen/_15pxh"
                android:layout_marginBottom="@dimen/_11pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="@dimen/_20pxh"
                android:scaleType="centerCrop" circular="@{true}"
                imageRes="@{@drawable/img_icoutlineemai}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_icoutlineemai"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnEmail"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_9pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_9pxv"
                android:singleLine="true"
                android:text="@string/lbl_email"
                android:textAllCaps="false"
                style="@style/btnRoundedOutline_2" tools:text="@string/lbl_email"/>
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSendVerificationCode"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_52pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_23pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_23pxv" android:singleLine="true"
            android:text="@string/msg_send_verificati"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/msg_send_verificati"/>
    </LinearLayout>
</layout>
