<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="screenFiveVM" type="com.safiuddinsapplication.app.modules.screenfive.data.viewmodel.ScreenFiveVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearScreenFive"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylelime_901">
        <FrameLayout android:gravity="start"
            android:id="@+id/frameStackgroupone"
            android:layout_height="@dimen/_175pxv" android:layout_width="match_parent">
            <ImageView android:id="@+id/imageGroupOne"
                android:layout_gravity="start"
                android:layout_height="@dimen/_175pxh"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_group1}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_group1"/>
            <TextView android:ellipsize="end"
                android:gravity="top|start"
                android:id="@+id/txtLanguage"
                android:layout_gravity="bottom|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_51pxv"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_51pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{screenFiveVM.screenFiveModel.txtLanguage}"
                style="@style/txtABeeZeeitalic32" tools:text="@string/lbl_create_account"/>
        </FrameLayout>
        <FrameLayout android:id="@+id/frameName"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_37pxv"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_115pxv"
            android:layout_width="@dimen/_318pxh" style="@style/groupStylecornerRadius_3">
            <ImageView android:id="@+id/imagePhuserlight"
                android:layout_gravity="start"
                android:layout_height="@dimen/_17pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_9pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="@dimen/_19pxh"
                android:scaleType="centerCrop" circular="@{true}"
                imageRes="@{@drawable/img_phuserlight}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_phuserlight"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnFullName"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_9pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_9pxv"
                android:singleLine="true"
                android:text="@string/lbl_full_name"
                android:textAllCaps="false"
                style="@style/btnRoundedOutline_2" tools:text="@string/lbl_full_name"/>
        </FrameLayout>
        <FrameLayout android:id="@+id/frameEmail"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_37pxv"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="@dimen/_318pxh" style="@style/groupStylecornerRadius_3">
            <ImageView android:id="@+id/imageIcoutlineemai"
                android:layout_gravity="start"
                android:layout_height="@dimen/_15pxh"
                android:layout_marginBottom="@dimen/_11pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="@dimen/_20pxh"
                android:scaleType="centerCrop" circular="@{true}"
                imageRes="@{@drawable/img_icoutlineemai}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_icoutlineemai"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnEmail"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_9pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_9pxv"
                android:singleLine="true"
                android:text="@string/lbl_email"
                android:textAllCaps="false"
                style="@style/btnRoundedOutline_2" tools:text="@string/lbl_email"/>
        </FrameLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:gravity="center_horizontal"
            android:id="@+id/recyclerScreenFive"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="match_parent"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            itemSpace="@{@dimen/_29pxh}" tools:itemCount="2" tools:listitem="@layout/row_screen_five"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSignUp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_178pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_24pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_24pxv" android:singleLine="true"
            android:text="@string/lbl_sign_up"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/lbl_sign_up"/>
    </LinearLayout>
</layout>
