<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="dropdownVM" type="com.safiuddinsapplication.app.modules.dropdown.data.viewmodel.DropdownVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearDropdown"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearDropdownContai"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius_4">
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearStateDefault"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_28pxv"
                android:layout_width="wrap_content"
                android:orientation="vertical" style="@style/groupStylecornerRadius_5">
                <Spinner
                    android:background="@drawable/layer_list_bg_white_a700_border_black_900_19_radius_8"
                    android:gravity="start"
                    android:id="@+id/spinnerLanguage"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" tools:listitem="@layout/spinner_item"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearStateHover"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="wrap_content"
                android:orientation="vertical" style="@style/groupStylecornerRadius_6">
                <Spinner
                    android:background="@drawable/layer_list_bg_gray_100_border_black_900_19_radius_8"
                    android:gravity="center_horizontal"
                    android:id="@+id/spinnerLanguageOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_1pxh"
                    android:layout_width="match_parent" tools:listitem="@layout/spinner_item"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearStateOpen"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="wrap_content"
                android:orientation="vertical" style="@style/groupStylecornerRadius_5">
                <Spinner
                    android:background="@drawable/layer_list_bg_gray_100_border_black_900_19_radius_8"
                    android:id="@+id/spinnerLanguageTwo"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" tools:listitem="@layout/spinner_item"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearListofitems"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtMenuitemlabel"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_16pxh"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_15pxv"
                        android:layout_width="wrap_content"
                        android:lineSpacingExtra="@dimen/_4pxh"
                        android:singleLine="true"
                        android:text="@{dropdownVM.dropdownModel.txtMenuitemlabel}"
                        style="@style/txtFiraSansregular16" tools:text="@string/lbl_talha"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtMenuitemlabelOne"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_16pxh"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_21pxv"
                        android:layout_width="wrap_content"
                        android:lineSpacingExtra="@dimen/_4pxh"
                        android:singleLine="true"
                        android:text="@{dropdownVM.dropdownModel.txtMenuitemlabelOne}"
                        style="@style/txtFiraSansregular16" tools:text="@string/lbl_john"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtLanguageThree"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_15pxv"
                        android:layout_marginEnd="@dimen/_16pxh"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_20pxv"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_4pxh"
                        android:singleLine="true"
                        android:text="@{dropdownVM.dropdownModel.txtLanguageThree}"
                        style="@style/txtFiraSansregular16" tools:text="@string/lbl_polish_pope"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
